--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,21 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-Copyright 2017 Harish Sridharan
 
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
-
--->
 <resources>
     <declare-styleable name="ShimmerRecyclerView">
         <attr name="shimmer_demo_layout" format="reference" />
@@ -48,7 +32,6 @@ limitations under the License.
 
     </declare-styleable>
 
-
     <declare-styleable name="MyTextView">
         <attr name="font" format="reference" />
     </declare-styleable>
@@ -60,11 +43,17 @@ limitations under the License.
         <attr name="lkwTextColor" format="color" />
     </declare-styleable>
 
-
-
-
     <declare-styleable name="GarlandView">
         <attr name="itemStart" format="dimension"/>
         <attr name="itemGap" format="dimension"/>
     </declare-styleable>
+
+    <declare-styleable name="daynnight">
+        <attr name="dayNnightBg" format="color" />
+        <attr name="dayNnightCard" format="color" />
+        <attr name="dayNnightText" format="color" />
+        <attr name="dayNnightTint" format="color" />
+        <attr name="dayNnightBtn" format="color" />
+    </declare-styleable>
+
 </resources>
