--- a/app/src/main/res/drawable/b2.xml
+++ b/app/src/main/res/drawable/b2.xml
@@ -2,9 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="#3ca55c"
-        android:endColor="#b5ac49"
-        android:angle="0"/>
+        android:startColor="#ffffff"
+        android:centerColor="#ffffff"
+        android:endColor="#1c4fa3"
+        android:angle="270"/>
     <corners
         android:bottomLeftRadius="13dp"
         android:bottomRightRadius="13dp"
