--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -22,8 +22,9 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/account_info"
-            android:tint="#ffffff"
-            android:layout_margin="5dp"/>
+            android:tint="?attr/dayNnightTint"
+            android:layout_margin="5dp"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -32,7 +33,7 @@
             android:textSize="18dp"
             android:layout_marginLeft="25dp"
             android:text="Account Information"
-            android:textColor="#ffffff"
+            android:textColor="?attr/dayNnightText"
             />
 
 
@@ -45,7 +46,7 @@
         android:layout_marginLeft="60dp"
         android:layout_marginRight="5dp"
         android:layout_below="@id/info"
-        android:background="#ffffff"
+        android:background="?attr/dayNnightText"
         />
 
     <LinearLayout
@@ -61,7 +62,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/verify_yourself"
-            android:tint="#ffffff"
+            android:tint="?attr/dayNnightTint"
             android:layout_margin="5dp"/>
 
         <TextView
@@ -71,7 +72,7 @@
             android:textSize="18dp"
             android:layout_marginLeft="25dp"
             android:text="Verify Yourself"
-            android:textColor="#ffffff"/>
+            android:textColor="?attr/dayNnightText"/>
 
     </LinearLayout>
 
@@ -83,7 +84,7 @@
         android:layout_marginLeft="60dp"
         android:layout_marginRight="5dp"
         android:layout_below="@id/verify"
-        android:background="#9e9e9e"
+        android:background="?attr/dayNnightText"
         />
 
     <LinearLayout
@@ -100,7 +101,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/free_coins"
-            android:tint="#ffffff"
+            android:tint="?attr/dayNnightTint"
             android:layout_margin="5dp"/>
 
         <TextView
@@ -110,7 +111,7 @@
             android:textSize="18dp"
             android:layout_marginLeft="25dp"
             android:text="Free Coins"
-            android:textColor="#ffffff"/>
+            android:textColor="?attr/dayNnightText"/>
 
     </LinearLayout>
 
@@ -123,7 +124,7 @@
         android:layout_marginLeft="60dp"
         android:layout_marginRight="5dp"
         android:layout_below="@id/coinsfree"
-        android:background="#ffffff"
+        android:background="?attr/dayNnightText"
         />
 
     <LinearLayout
@@ -139,7 +140,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/buy_coins"
-            android:tint="#ffffff"
+            android:tint="?attr/dayNnightTint"
             android:layout_margin="5dp"/>
 
         <TextView
@@ -149,7 +150,7 @@
             android:textSize="18dp"
             android:layout_marginLeft="25dp"
             android:text="Buy More Coins"
-            android:textColor="#ffffff"/>
+            android:textColor="?attr/dayNnightText"/>
 
     </LinearLayout>
 
@@ -162,7 +163,7 @@
         android:layout_marginLeft="60dp"
         android:layout_marginRight="5dp"
         android:layout_below="@id/morecoins"
-        android:background="#ffffff"
+        android:background="?attr/dayNnightText"
         />
 
     <LinearLayout
@@ -178,7 +179,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/theme"
-            android:tint="#ffffff"
+            android:tint="?attr/dayNnightTint"
             android:layout_margin="5dp"/>
 
         <LinearLayout
@@ -208,7 +209,7 @@
         android:layout_marginLeft="60dp"
         android:layout_marginRight="5dp"
         android:layout_below="@id/themes"
-        android:background="#ffffff"
+        android:background="?attr/dayNnightText"
         />
     <LinearLayout
         android:id="@+id/daily"
@@ -224,7 +225,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/check_in"
-            android:tint="#ffffff"
+            android:tint="?attr/dayNnightTint"
             android:layout_margin="5dp"/>
 
         <TextView
@@ -234,7 +235,7 @@
             android:textSize="18dp"
             android:layout_marginLeft="25dp"
             android:text="Daily Check-In"
-            android:textColor="#ffffff"/>
+            android:textColor="?attr/dayNnightText"/>
 
     </LinearLayout>
 
@@ -244,7 +245,7 @@
         android:layout_above="@+id/contactus"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#ffffff"/>
+        android:background="?attr/dayNnightText"/>
 
     <LinearLayout
         android:id="@+id/contactus"
@@ -259,13 +260,13 @@
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:src="@drawable/contact_us"
-            android:tint="#ffffff"
+            android:tint="?attr/dayNnightTint"
             android:layout_margin="5dp"/>
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_height="wrap_content"
             android:textSize="10dp"
             android:layout_marginLeft="5dp"
             android:text="Contact / Support"
@@ -287,7 +288,7 @@
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:src="@drawable/about_us"
-            android:tint="#ffffff"
+            android:tint="?attr/dayNnightTint"
             android:layout_margin="5dp"/>
 
         <TextView
