--- a/app/src/main/res/layout/activity_account_info.xml
+++ b/app/src/main/res/layout/activity_account_info.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/blur"
+    android:background="@drawable/bg_gradient"
     tools:context="com.twenty.four.crafts.AccountInfo">
 
     <android.support.v7.widget.Toolbar
