--- a/app/src/main/res/layout/activity_purchase_coins.xml
+++ b/app/src/main/res/layout/activity_purchase_coins.xml
@@ -10,31 +10,31 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="150sp"
+        android:layout_height="150dp"
         android:id="@+id/RelativeLayout1"
         android:background="@drawable/rounded_white_corners"
-        android:layout_margin="25sp">
+        android:layout_margin="25dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/Image1"
-            android:layout_width="100sp"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginLeft="14sp"
-            android:layout_marginStart="14sp"
-            android:elevation="10sp"
+            android:layout_marginLeft="14dp"
+            android:layout_marginStart="14dp"
+            android:elevation="10dp"
             android:src="@drawable/taigamod2" />
 
         <TextView
             android:id="@+id/divider"
-            android:layout_width="1sp"
+            android:layout_width="1dp"
             android:layout_height="match_parent"
             android:layout_toRightOf="@id/Image1"
             android:layout_centerInParent="true"
             android:background="#40404040"
-            android:layout_margin="20sp"/>
+            android:layout_margin="20dp"/>
 
         <LinearLayout
             android:layout_toRightOf="@id/divider"
@@ -72,18 +72,18 @@
         <LinearLayout
             android:id="@+id/linearlayoutt"
             android:layout_below="@id/RelativeLayout1"
-            android:layout_marginLeft="25sp"
-            android:layout_marginRight="25sp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
             android:background="@drawable/rounded_white_corners"
             android:gravity="center"
-            android:padding="10sp"
+            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
                 android:textSize="20sp"
                 android:text="current coins   "
-                android:layout_margin="5sp"
+                android:layout_margin="5dp"
                 android:fontFamily="sans-serif-smallcaps"
                 android:textColor="#000000"
                 android:layout_width="wrap_content"
@@ -93,15 +93,15 @@
                 android:id="@+id/coincount"
                 android:textSize="20sp"
                 android:textColor="#000000"
-                android:layout_margin="5sp"
+                android:layout_margin="5dp"
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="250"/>
 
             <ImageView
-                android:layout_width="20sp"
-                android:layout_height="20sp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:src="@drawable/single_coin"/>
 
         </LinearLayout>
@@ -109,7 +109,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:id="@+id/RelativeLayout3"
-        android:layout_margin="28sp"
+        android:layout_margin="28dp"
         android:gravity="center"
         android:layout_alignParentBottom="true"
         android:layout_below="@id/linearlayoutt"
@@ -119,17 +119,17 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_1"
-        android:layout_width="120sp"
-        android:layout_height="100sp"
-        app:cardCornerRadius="5sp"
+        android:layout_width="120dp"
+        android:layout_height="100dp"
+        app:cardCornerRadius="5dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginRight="20sp"
-        android:layout_marginBottom="20sp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
         app:cardBackgroundColor="#ffffff"
-        app:cardElevation="8sp"
+        app:cardElevation="8dp"
         app:cardPreventCornerOverlap="false"
-        app:contentPadding="0sp">
+        app:contentPadding="0dp">
 
         <LinearLayout
             android:orientation="vertical"
@@ -139,9 +139,9 @@
         <ImageView
             android:id="@+id/RelativeLayout3Image1"
             android:src="@drawable/coins1"
-            android:layout_marginTop="5sp"
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
-            android:layout_height="70sp"
+            android:layout_height="70dp"
             android:layout_marginBottom="5dp"/>
 
         <TextView
@@ -163,16 +163,16 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_view_2"
-            android:layout_width="120sp"
-            android:layout_height="100sp"
-            app:cardCornerRadius="5sp"
+            android:layout_width="120dp"
+            android:layout_height="100dp"
+            app:cardCornerRadius="5dp"
             app:cardBackgroundColor="#ffffff"
-            app:cardElevation="8sp"
+            app:cardElevation="8dp"
             android:layout_toRightOf="@+id/card_view_1"
-            android:layout_marginLeft="20sp"
-            android:layout_marginBottom="20sp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="20dp"
             app:cardPreventCornerOverlap="false"
-            app:contentPadding="0sp">
+            app:contentPadding="0dp">
 
             <LinearLayout
                 android:orientation="vertical"
@@ -182,9 +182,9 @@
                 <ImageView
                     android:src="@drawable/coins2"
                     android:id="@+id/RelativeLayout3Image2"
-                    android:layout_marginTop="5sp"
+                    android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
-                    android:layout_height="70sp"
+                    android:layout_height="70dp"
                     android:layout_marginBottom="5dp"/>
 
                 <TextView
@@ -206,16 +206,16 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_view_3"
-            android:layout_width="120sp"
-            android:layout_height="100sp"
-            app:cardCornerRadius="5sp"
-            android:layout_marginRight="20sp"
-            android:layout_marginTop="20sp"
+            android:layout_width="120dp"
+            android:layout_height="100dp"
+            app:cardCornerRadius="5dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="20dp"
             android:layout_below="@id/card_view_1"
             app:cardBackgroundColor="#ffffff"
-            app:cardElevation="8sp"
+            app:cardElevation="8dp"
             app:cardPreventCornerOverlap="false"
-            app:contentPadding="0sp">
+            app:contentPadding="0dp">
 
             <LinearLayout
                 android:orientation="vertical"
@@ -224,9 +224,9 @@
                 <ImageView
                     android:src="@drawable/coins3"
                     android:id="@+id/RelativeLayout3Image3"
-                    android:layout_marginTop="5sp"
+                    android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
-                    android:layout_height="70sp"
+                    android:layout_height="70dp"
                     android:layout_marginBottom="5dp"/>
                 <TextView
                     android:id="@+id/FrameLayout1Text3"
@@ -248,17 +248,17 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_view_4"
-            android:layout_width="120sp"
-            android:layout_height="100sp"
+            android:layout_width="120dp"
+            android:layout_height="100dp"
             android:layout_below="@id/card_view_2"
             android:layout_toRightOf="@id/card_view_3"
-            android:layout_marginLeft="20sp"
-            android:layout_marginTop="20sp"
-            app:cardCornerRadius="5sp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            app:cardCornerRadius="5dp"
             app:cardBackgroundColor="#ffffff"
-            app:cardElevation="8sp"
+            app:cardElevation="8dp"
             app:cardPreventCornerOverlap="false"
-            app:contentPadding="0sp">
+            app:contentPadding="0dp">
 
             <LinearLayout
                 android:orientation="vertical"
@@ -268,9 +268,9 @@
                 <ImageView
                     android:src="@drawable/coins4"
                     android:id="@+id/RelativeLayout3Image4"
-                    android:layout_marginTop="5sp"
+                    android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
-                    android:layout_height="70sp"
+                    android:layout_height="70dp"
                     android:layout_marginBottom="5dp"/>
 
                 <TextView
