--- a/app/src/main/res/layout/nav_header_main2.xml
+++ b/app/src/main/res/layout/nav_header_main2.xml
@@ -90,27 +90,37 @@
 
     </LinearLayout>
 
-        <ImageView
-            android:id="@+id/purchase_coins"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:layout_margin="5dp"
-            android:background="?android:attr/selectableItemBackground"
-            android:focusable="true"
-            android:padding="5dp"
-            android:src="@drawable/free_coins" />
+            android:gravity="center">
 
-        <TextView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:id="@+id/coinCount"
-            android:text="250"
-            android:gravity="bottom"
-            android:layout_marginBottom="5dp"
-            android:layout_alignParentBottom="true"
-            android:layout_toLeftOf="@id/purchase_coins"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/coinCount"
+                android:text="250"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:gravity="center_vertical"/>
+
+            <ImageView
+                android:id="@+id/purchase_coins"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:focusable="true"
+                android:padding="5dp"
+                android:src="@drawable/single_coin" />
+
+
+        </LinearLayout>
+
+
 
 
     </RelativeLayout>
