--- a/app/src/main/res/layout/activity_auditions_main.xml
+++ b/app/src/main/res/layout/activity_auditions_main.xml
@@ -17,6 +17,7 @@
         android:clipToPadding="false"
         android:divider="@android:color/transparent"
         android:dividerHeight="10dp"
+        android:nestedScrollingEnabled="true"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
