--- a/app/src/main/res/drawable/b2.xml
+++ b/app/src/main/res/drawable/b2.xml
@@ -4,11 +4,6 @@
     <gradient
         android:startColor="#ffffff"
         android:centerColor="#ffffff"
-        android:endColor="#1c4fa3"
+        android:endColor="#7da4e4"
         android:angle="270"/>
-    <corners
-        android:bottomLeftRadius="13dp"
-        android:bottomRightRadius="13dp"
-        android:topLeftRadius="13dp"
-        android:topRightRadius="13dp" />
 </shape>
